# kdb-search

./: .dockerignore  .gitignore  .gitmodules  docker-compose.yml  main.py  pyproject.toml
corpus/: collect_syllabi.py  syllabus.100.jsonl
mappings/: kasyore.json  kdb.json
vector_indexer/elasticsearch/: Dockerfile.jp
