[tool.poetry]
name = "densa"
version = "0.1.0"
description = ""
authors = ["kush <kouta528bado@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<4.0"
fotla = { path = "./fotla", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 86
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 86
skip_gitignore = true

[tool.ruff]
ignore = ["F841", "F401"]
